--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "ride/app-template-php",
     "description": "PHP template engine integration for a Ride application.",
     "license": "MIT",
-    "version": "0.3.0",
     "authors": [
         {
             "name": "Joris Vandeweerd",
@@ -10,8 +9,8 @@
         }
     ],
     "require": {
-        "ride/app": ">=0.4.0",
-        "ride/app-template": ">=0.3.0",
-        "ride/lib-template-php": ">=0.3.0"
+        "ride/app": "^1.0.0",
+        "ride/app-template": "^1.0.0",
+        "ride/lib-template-php": "^1.0.0"
     }
 }
